# freecad-cli

./: .gitignore  CLAUDE.md  FREECAD.md  pyproject.toml
freecad_cli/: README.md  __init__.py  freecad_cli.py
freecad_cli/core/: __init__.py  boolean.py  export.py  inspect.py  measure.py  partdesign.py  primitives.py  printer.py  project.py  session.py  sketch.py  transform.py
freecad_cli/tests/: TEST.md  __init__.py  test_core.py  test_full_e2e.py
freecad_cli/utils/: __init__.py  errors.py  json_output.py  runner.py
